<resources>
    <string name="app_name">AA2020</string>
    <string name="text_back">Back</string>
    <string name="text_title">Avengers:\nEnd Game</string>
    <string name="text_tag">Action, Adventure, Fantasy</string>
    <string name="text_reviews">125 Reviews</string>
    <string name="text_storyline">Storyline</string>
    <string name="text_story">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="text_cast">Cast</string>
    <string name="text_move1">Robert Downey Jr.</string>
    <string name="text_move2">Chris Evans</string>
    <string name="text_move3">Mark Ruffalo</string>
    <string name="text_move4">Chris Hemsworth</string>
    <string name="text_age">13+</string>
    <string name="movie_list_text_title">Movies list</string>
    <string name="movie_list_mivie_type">Action, Adventure, Drama</string>
    <string name="movie_list_review">125 Reviews</string>
    <string name="movie_list_movie_name">Avengers: End Game</string>
    <string name="movie_list_movie_time">137 min</string>
    <string name="movie_list_age">13+</string>
    <string name="review_string">%d reviews</string>
    <string name="time_string">%d min</string>
    <string name="channel_name">academy_cinema_app</string>
    <string name="channel_description">notification for cinema with big raiting</string>
</resources>