<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    tools:context=".MovieDetailsActivity"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp"
     >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/image_bg_orig"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="centerCrop"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <ImageView
            android:id="@+id/image_bg_mask"
            android:layout_width="0dp"
            android:layout_height="149dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_bg_orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/mask" />

        <TextView
            android:id="@+id/text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/text_back"
            android:textColor="@color/text_back"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_back"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/text_back"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textColor="@color/text_title"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/image_bg_mask"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/image_bg_mask" />

        <ImageView
            android:id="@+id/image_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/text_title"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:srcCompat="@drawable/age" />

        <TextView
            android:id="@+id/text_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_tag"
            android:textColor="@color/text_tag"
            android:textSize="@dimen/text_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <ImageView
            android:id="@+id/image_star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/text_tag"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/image_star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/image_star1"
            app:layout_constraintTop_toTopOf="@+id/image_star1"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/image_star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/image_star2"
            app:layout_constraintTop_toTopOf="@+id/image_star2"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/image_star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/image_star3"
            app:layout_constraintTop_toTopOf="@+id/image_star3"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/image_star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/image_star4"
            app:layout_constraintTop_toTopOf="@+id/image_star4"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/star_disable" />

        <TextView
            android:id="@+id/text_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_reviews"
            android:textColor="@color/text_reviews"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/image_star5"
            app:layout_constraintStart_toEndOf="@+id/image_star5"
            app:layout_constraintTop_toTopOf="@+id/image_star5" />

        <TextView
            android:id="@+id/text_storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_storyline"
            android:textColor="@color/text_title"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/image_star1" />

        <TextView
            android:id="@+id/text_story"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/text_story"
            android:textColor="@color/text_white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/text_storyline" />

        <TextView
            android:id="@+id/text_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_cast"
            android:textColor="@color/text_title"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/text_story" />

        <ImageView
            android:id="@+id/image_movie1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/image_movie2"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/text_cast"
            app:srcCompat="@drawable/movie1" />

        <ImageView
            android:id="@+id/image_movie2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@+id/image_movie3"
            app:layout_constraintStart_toEndOf="@+id/image_movie1"
            app:layout_constraintTop_toTopOf="@+id/image_movie1"
            app:srcCompat="@drawable/movie2" />

        <ImageView
            android:id="@+id/image_movie3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/image_movie4"
            app:layout_constraintStart_toEndOf="@+id/image_movie2"
            app:layout_constraintTop_toTopOf="@+id/image_movie2"
            app:srcCompat="@drawable/movie3" />

        <ImageView
            android:id="@+id/image_movie4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/image_movie3"
            app:layout_constraintTop_toTopOf="@+id/image_movie3"
            app:srcCompat="@drawable/movie4" />

        <TextView
            android:id="@+id/text_move1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_move1"
            android:textColor="@color/text_movie"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_movie1"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/image_movie1" />

        <TextView
            android:id="@+id/text_move2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_move2"
            android:textColor="@color/text_movie"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_movie2"
            app:layout_constraintStart_toStartOf="@+id/image_movie2"
            app:layout_constraintTop_toTopOf="@+id/text_move1" />

        <TextView
            android:id="@+id/text_move3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="4"
            android:text="@string/text_move3"
            android:textColor="#D8D8D8"
            android:textSize="@dimen/small_text"

            app:layout_constraintEnd_toEndOf="@+id/image_movie3"
            app:layout_constraintStart_toStartOf="@+id/image_movie3"
            app:layout_constraintTop_toTopOf="@+id/text_move1" />

        <TextView
            android:id="@+id/text_move4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_move4"
            android:textColor="@color/text_movie"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_movie4"
            app:layout_constraintStart_toStartOf="@+id/image_movie4"
            app:layout_constraintTop_toTopOf="@+id/text_move1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
