<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_target"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/movie_list_text_title"
            android:textColor="@color/text_white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/image_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_title"
            app:layout_constraintTop_toTopOf="@+id/image_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_item"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/bg_small_item"
            android:padding="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title">


            <ImageView
                android:id="@+id/image_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/text_movie_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/movie_small_item"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image_mask"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/image_bg"
                app:layout_constraintEnd_toEndOf="@+id/image_bg"
                app:layout_constraintStart_toStartOf="@+id/image_bg"
                app:layout_constraintTop_toTopOf="@+id/image_bg"
                app:srcCompat="@drawable/ic_mask"
                tools:ignore="ContentDescription"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/image_age"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/text_age"
                app:layout_constraintEnd_toEndOf="@+id/text_age"
                app:layout_constraintStart_toStartOf="@+id/text_age"
                app:layout_constraintTop_toTopOf="@+id/text_age"
                app:srcCompat="@drawable/age_form"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:padding="4dp"
                android:text="@string/movie_list_age"
                android:textColor="@color/text_white"
                android:textSize="@dimen/small_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="6dp"
                app:layout_constraintEnd_toEndOf="@+id/image_bg"
                app:layout_constraintTop_toTopOf="@+id/image_bg"
                app:srcCompat="@drawable/ic_like"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/text_movie_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/movie_list_mivie_type"
                android:textColor="@color/text_tag"
                android:textSize="@dimen/mini_text"
                app:layout_constraintBottom_toTopOf="@+id/text_reviews"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline_left" />

            <ImageView
                android:id="@+id/image_star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/text_reviews"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toTopOf="@+id/text_reviews"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/star_enable"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image_star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/image_star1"
                app:layout_constraintTop_toTopOf="@+id/image_star1"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/star_enable"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image_star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/image_star2"
                app:layout_constraintTop_toTopOf="@+id/image_star1"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/star_enable"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image_star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/image_star3"
                app:layout_constraintTop_toTopOf="@+id/image_star1"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/star_enable"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image_star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/image_star4"
                app:layout_constraintTop_toTopOf="@+id/image_star1"
                app:srcCompat="@drawable/ic_star"
                app:tint="@color/star_disable"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="8dp"
                android:text="@string/movie_list_review"
                android:textAllCaps="true"
                android:textColor="@color/text_reviews"
                android:textSize="@dimen/mini_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/image_bg"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/image_star5" />

            <TextView
                android:id="@+id/text_movie_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/movie_list_movie_name"
                android:textColor="@color/text_movie"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/text_movie_time"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline_left" />

            <TextView
                android:id="@+id/text_movie_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/movie_list_movie_time"
                android:textAllCaps="true"
                android:textColor="@color/text_time"
                android:textSize="@dimen/mini_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/text_movie_name" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="6dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="6dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>